Resolves Bug 1364290: High Contrast down arrow in combo box not visible in high contrast themes
This bug extends to when Devtools has a dark theme and a high contrast white theme is selected. The dropdown arrow is not visible in this case.

The change applies a css selector to specify which dropdown image we use depending on white and dark contrast themes.


Before:

Dark Devtools Theme + Light High Contrast Theme
https://i.imgur.com/x1PMnXS.png

Light Devtools Theme + Dark High Contrast Theme
https://i.imgur.com/jbDwUUy.png

After
Dark Devtools Theme + Light High Contrast Theme
https://i.imgur.com/0pWWA0j.png

Light Devtools Theme + Dark High Contrast Theme
https://i.imgur.com/qKaaGpY.png


Bug: 1364290: High contrast down arrow in combo box not visible in high contrast themes
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3950789
Commit-Queue: Leo Lee <leolee@microsoft.com>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -404,6 +404,28 @@ input::placeholder {
   border-color: transparent;
 }
 
+@media (forced-colors: active) and (prefers-color-scheme: light) {
+  .chrome-select {
+    background-image: var(--image-file-chromeSelect);
+  }
+
+  .-theme-with-dark-background .chrome-select,
+  :host-context(.-theme-with-dark-background) .chrome-select {
+    background-image: var(--image-file-chromeSelect);
+  }
+}
+
+@media (forced-colors: active) and (prefers-color-scheme: dark) {
+  .chrome-select {
+    background-image: var(--image-file-chromeSelectDark);
+  }
+
+  .-theme-with-dark-background .chrome-select,
+  :host-context(.-theme-with-dark-background) .chrome-select {
+    background-image: var(--image-file-chromeSelectDark);
+  }
+}
+
 .-theme-with-dark-background .chrome-select:enabled:active,
 .-theme-with-dark-background .chrome-select:enabled:focus,
 .-theme-with-dark-background .chrome-select:enabled:hover,
